--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^4.6.2",
+    "chart.js": "^4.4.1",
+    "ng2-charts": "^5.0.4",
     "ngx-bootstrap": "^12.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
